--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,15 @@ body {
   background-repeat: no-repeat;
 }
 
+#video {
+  text-align: center;
+  margin-top: 17%;
+}
+
+#button {
+  text-align: center;
+}
+
 .container {
   margin: 0;
   padding: 0;
@@ -89,7 +98,7 @@ input:checked + .slider:before {
     100% { color: black; }
 }
 
-.new-animation {
+.isBeingHovered {
   animation: color-change 2s infinite;
 }
 
@@ -115,4 +124,21 @@ a:hover {
 a:active {
   color: black;
   text-decoration: none;
+}
+
+/* arrow */
+i {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  height: 10px;
+  width: 10px;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
 }
